deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okr-unit
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - okr-unit.pskwr.com
      secretName: okr-unit-tls
  rules:
    - host: okr-unit.pskwr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: okr-unit
                port:
                  name: http
